--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "module",
+  "dependencies": {
+    "@langchain/core": "^1.1.8",
+    "@langchain/openai": "^1.2.0",
+    "dotenv": "^17.2.3",
+    "langchain": "^1.2.3"
+  }
 }
