--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@langchain/core": "^1.1.8",
+    "@langchain/groq": "^1.0.2",
     "@langchain/openai": "^1.2.0",
     "dotenv": "^17.2.3",
     "langchain": "^1.2.3"
