add persona-based suites, E2E workflow, and test isolation using custom fixtures

--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "scripts": {
     "test": "playwright test",
     "test:report": "playwright show-report",
-    "group:failures": "node scripts/groupFailures.js"
+    "group:failures": "node scripts/groupFailures.js",
+    "create:issues": "node scripts/createGithubIssues.js"
+
   }
+  
 
 
 }
