--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:report": "playwright show-report",
+    "group:failures": "node scripts/groupFailures.js",
+    "create:issues": "node scripts/createGithubIssues.js",
+    "start-app": "node app/server.js",
+    "qa:init": "node scripts/initQA.js"
+
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,23 +21,11 @@
     "@langchain/groq": "^1.0.2",
     "@langchain/openai": "^1.2.0",
     "dotenv": "^17.2.3",
+    "inquirer": "^13.2.2",
     "langchain": "^1.2.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3"
   }
-  ,
-  "scripts": {
-    "test": "playwright test",
-    "test:report": "playwright show-report",
-    "group:failures": "node scripts/groupFailures.js",
-    "create:issues": "node scripts/createGithubIssues.js",
-    "start-app": "node app/server.js"
-
-
-  }
-  
-
-
 }
