--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "group:failures": "node scripts/groupFailures.js",
     "create:issues": "node scripts/createGithubIssues.js",
     "start-app": "node app/server.js",
-    "qa:init": "node scripts/initQA.js"
+    "qa:init": "node scripts/initQA.js",
+    "qa:check": "node scripts/preflight.js",
+    "qa:demo": "node scripts/demoRun.js"
+
 
   },
   "keywords": [],
@@ -22,7 +25,8 @@
     "@langchain/openai": "^1.2.0",
     "dotenv": "^17.2.3",
     "inquirer": "^13.2.2",
-    "langchain": "^1.2.3"
+    "langchain": "^1.2.3",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
